--- a/public/css/style.css
+++ b/public/css/style.css
@@ -299,7 +299,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/hero-bg.jpeg") top right;
   background-size: cover;
   position: relative;
 }
@@ -1137,6 +1137,7 @@ section {
     transform: rotate(360deg);
   }
 }
+
 
 /*--------------------------------------------------------------
 # Footer
